--- a/ind23.html
+++ b/ind23.html
@@ -60,7 +60,7 @@
             <div class="col-md-8 col-lg-9 col-xl-10">
                 <div class="pt-8 pb-4">
                     <article class="px-4 border-bottom border-2 border-discred">
-                        <h1 class="fw-bolder">Brisbane Global Game Jam 2023</h1>
+                        <h1 class="fw-bolder">Interactive Narrative Design 2023</h1>
                         <p>Bit of info about the server.</p>
                     </article>
                     <section id="general" class="datablock ps-4 py-6 pe-10 border-bottom border-2 border-discred">
