--- a/ind23.html
+++ b/ind23.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="dark">
 
 <head>
-    <link rel="stylesheet" href="/index.6a214c4c.css">
+    <link rel="stylesheet" href="/main.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PhData | ind23</title>
