--- a/ind23.html
+++ b/ind23.html
@@ -18,7 +18,7 @@
                 aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="/index.html" class="nav-link">home</a> </li>
+                    <li class="nav-item"><a href="https://exscurra.github.io/PhData" class="nav-link">home</a> </li>
                     <li class="nav-item"><a href="/ind21.html" class="nav-link">ind21</a> </li>
                     <li class="nav-item"><a href="/ind23.html" class="active nav-link" aria-current="page">ind23</a>
                     </li>
