--- a/ind23.html
+++ b/ind23.html
@@ -19,11 +19,11 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a href="https://exscurra.github.io/PhData" class="nav-link">home</a> </li>
-                    <li class="nav-item"><a href="/ind21.html" class="nav-link">ind21</a> </li>
-                    <li class="nav-item"><a href="/ind23.html" class="active nav-link" aria-current="page">ind23</a>
+                    <li class="nav-item"><a href="https://exscurra.github.io/PhData/ind21" class="nav-link">ind21</a> </li>
+                    <li class="nav-item"><a href="https://exscurra.github.io/PhData/ind23" class="active nav-link" aria-current="page">ind23</a>
                     </li>
-                    <li class="nav-item"><a href="/bggj23.html" class="nav-link">bggj23</a> </li>
-                    <li class="nav-item"><a href="/comparison.html" class="nav-link">comparison</a></li>
+                    <li class="nav-item"><a href="https://exscurra.github.io/PhData/bggj23" class="nav-link">bggj23</a> </li>
+                    <li class="nav-item"><a href="https://exscurra.github.io/PhData/comparison" class="nav-link">comparison</a></li>
                 </ul>
             </div>
         </div>
