--- a/comparison.html
+++ b/comparison.html
@@ -18,12 +18,12 @@
                 aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="/index.html" class="nav-link">home</a> </li>
-                    <li class="nav-item"><a href="/ind21.html" class="nav-link">ind21</a> </li>
-                    <li class="nav-item"><a href="/ind23.html" class="nav-link">ind23</a> </li>
-                    <li class="nav-item"><a href="/bggj23.html" class="nav-link">bggj23</a> </li>
-                    <li class="nav-item"><a href="/comparison.html" class="active nav-link"
-                            aria-current="page">comparison</a></li>
+                     <li class="nav-item"><a href="https://exscurra.github.io/PhData" class="nav-link">home</a> </li>
+                    <li class="nav-item"><a href="https://exscurra.github.io/PhData/ind21" class="nav-link">ind21</a> </li>
+                    <li class="nav-item"><a href="https://exscurra.github.io/PhData/ind23" class="nav-link">ind23</a>
+                    </li>
+                    <li class="nav-item"><a href="https://exscurra.github.io/PhData/bggj23" class="nav-link">bggj23</a> </li>
+                    <li class="nav-item"><a href="https://exscurra.github.io/PhData/comparison" class="active nav-link" aria-current="page">comparison</a></li>
                 </ul>
             </div>
         </div>
