--- a/bggj23.html
+++ b/bggj23.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="dark">
 
 <head>
-    <link rel="stylesheet" href="/index.6a214c4c.css">
+    <link rel="stylesheet" href="./main.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PhData | bggj23</title>
@@ -18,12 +18,12 @@
                 aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="/index.html" class="nav-link">home</a> </li>
-                    <li class="nav-item"><a href="/ind21.html" class="nav-link">ind21</a> </li>
-                    <li class="nav-item"><a href="/ind23.html" class="nav-link">ind23</a> </li>
-                    <li class="nav-item"><a href="/bggj23.html" class="active nav-link" aria-current="page">bggj23</a>
+                    <li class="nav-item"><a href="https://exscurra.github.io/PhData" class="nav-link">home</a> </li>
+                    <li class="nav-item"><a href="https://exscurra.github.io/PhData/ind21" class="nav-link">ind21</a> </li>
+                    <li class="nav-item"><a href="https://exscurra.github.io/PhData/ind23" class="nav-link">ind23</a>
                     </li>
-                    <li class="nav-item"><a href="/comparison.html" class="nav-link">comparison</a></li>
+                    <li class="nav-item"><a href="https://exscurra.github.io/PhData/bggj23" class="active nav-link" aria-current="page">bggj23</a> </li>
+                    <li class="nav-item"><a href="https://exscurra.github.io/PhData/comparison" class="nav-link">comparison</a></li>
                 </ul>
             </div>
         </div>
