--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="bg-discdark border-2 border-bottom border-discgray navbar navbar-expand-lg">
-        <div class="container primarynav"> <a href="/index.html" class="navbar-brand">
+        <div class="container primarynav"> <a href="https://exscurra.github.io/PhData" class="navbar-brand">
                 <p class="fw-bolder mb-0">PhData</p>
             </a> <button class="border-0 navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -40,7 +40,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin></script>
-    <script src="/index.91605e1e.js" defer></script>
+    <script src="/main.js" defer></script>
 </body>
 
 </html>
