--- a/ind23.html
+++ b/ind23.html
@@ -11,7 +11,7 @@
 
 <body data-bs-spy="scroll" data-bs-target="#sidebarNav" data-bs-offset="100" tabindex="0">
     <nav class="bg-discdark border-2 border-bottom border-discgray navbar navbar-expand-lg">
-        <div class="container primarynav"> <a href="/index.html" class="navbar-brand">
+        <div class="container primarynav"> <a href="https://exscurra.github.io/PhData" class="navbar-brand">
                 <p class="fw-bolder mb-0">PhData</p>
             </a> <button class="border-0 navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
