--- a/index.html
+++ b/index.html
@@ -29,13 +29,18 @@
         </div>
     </nav>
     <main class="container my-4">
-        <h1 class="fw-bolder">test</h1>
-        <p>site under construction</p>
+        <h1 class="fw-bolder">PhData: All of the Heatmaps</h1>
+        <p>Hi! Welcome to the site I initially made for ease of analysis of my research data. I didn't intend for this to be used or viewed by anyone else, so I apologise for the mess. Each page on this site contains the filterable heatmaps for my PhD research. Below is a bit of a guide so you can find your way around.</p>
+        <ul>
+            <li><a href="https://exscurra.github.io/PhData/ind21">ind21</a>: The heatmaps for the Interactive Narrative Design 2021 Discord Server public channels.</li>
+            <li><a href="https://exscurra.github.io/PhData/ind23">ind23</a>: The heatmaps for the Interactive Narrative Design 2023 Discord Server public channels.</li>
+            <li><a href="https://exscurra.github.io/PhData/bggj23">ind21</a>: The heatmaps for the Brisbane Global Game Jam 2023 Server public channels.</li>
+            <li><a href="https://exscurra.github.io/PhData/comparison">ind21</a>: A side-by-side comparison of the IND21 and IND23 public channels. <em>Note: this page works best on Desktop</em></li>
+        </ul>
     </main>
     <footer class="bg-discdark border-2 border-discgray border-top">
         <div class="px-4 px-lg-10 py-4 text-center">
-            <p class="mb-0"><em>This data is from my PhD, recorded 2021-2023. It has no identifying features, so good
-                    luck copying it.</em> </p>
+            <p class="mb-0"><em>This data is from my PhD, recorded 2021-2023. Copyright Jess Greentree, 2025.</em> </p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -44,3 +49,4 @@
 </body>
 
 </html>
+
