--- a/comparison.html
+++ b/comparison.html
@@ -188,8 +188,7 @@
     </main>
     <footer class="bg-discdark border-2 border-discgray border-top">
         <div class="px-4 px-lg-10 py-4 text-center">
-            <p class="mb-0"><em>This data is from my PhD, recorded 2021-2023. It has no identifying features, so good
-                    luck copying it.</em> </p>
+            <p class="mb-0"><em>This data is from my PhD, recorded 2021-2023. Copyright Jess Greentree, 2025.</em> </p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -198,3 +197,4 @@
 </body>
 
 </html>
+
